# transpiler

./: .travis.yml  README.md  transpiler.cabal
src/: BatchParser.hs  CSharpPrinter.hs  Common.hs  Main.hs
src/Batch/: Definitions.hs  Lexer.hs  Parser.hs  Transformer.hs
src/CSharp/: Definitions.hs  Printer.hs  Transformer.hs
src/Common/: Definitions.hs
test/: BatchParserTests.hs  SingleLineCommandTests.hs  TestSuite.hs
test/Batch/: LexerTests.hs  ParserTests.hs  TransformerTests.hs
test/CSharp/: PrinterTests.hs  TransformerTests.hs
