name:                transpiler
version:             0.0.0.1
synopsis:            cmd.exe batch script to C# transpiler
description:         Command line utility for transforming cmd.exe batch scripts into equivalent C# code
license:             MIT
license-file:        LICENSE
author:              Daniel Stiner
maintainer:          Daniel Stiner <daniel.stiner@gmail.com>
stability:           Experimental
homepage:            http://github.com/danstiner/transpiler
bug-reports:         http://github.com/danstiner/transpiler/issues
category:            Compiler
build-type:          Simple
cabal-version:       >=1.9.2
tested-with:         GHC==7.6.3, GHC==7.8.2

executable transpiler
  Hs-Source-Dirs:    src
  Main-Is:           Main.hs
  GHC-Options:       -Wall -threaded -O3
  GHC-Prof-Options:  -fprof-auto "-with-rtsopts=-N -p -s -i0.1"
  Build-Depends:     base >= 4 && < 5
                     , MissingH
                     , mtl
                     , parsec >= 3.1.7

Test-suite test
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    src test
  Main-Is:           TestSuite.hs
  Build-Depends:     base >= 4 && < 5
                     , MissingH
                     , mtl
                     , parsec >= 3.1.7

                     , HUnit
                     , QuickCheck >= 2.7
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2

source-repository head
  type: git
  location: git://github.com:danstiner/transpiler.git
